# web3AIRuntime

./: .env.example  .gitignore  MCP_COMPLETE.md  MCP_INTEGRATION.md  README.md  bunfig.toml  package-lock.json  package.json  test-mcp-advanced.sh  test-mcp.sh  tsconfig.json
.github/workflows/: ci.yml
.w3rt/: W3RT.md  policy.yaml
docs/: INDEX.md  TODO.md  architecture.md  hosts.md  mvp-solana.md  pi-integration.md  policy.md  solana-allowlist-template.md  solana-balance.md  solana-token-accounts.md  solana-transfer.md  spec.md  trace.md  workflow.md
examples/defi-metrics/: README.md  docker-compose.yml
ocaml-scheduler/: README.md  dune-project  w3rt_scheduler.opam
ocaml-scheduler/examples/: workflow.json  workflow_bad.json  workflow_min.json
ocaml-scheduler/lib/: compile.ml  dag.ml  dune  index.ml  parser.ml  types.ml
scripts/: check-no-build-artifacts-in-src.sh  demo_jupiter_swap.sh  demo_local_daemon.sh  demo_meteora_prepare.sh  demo_stable_yield_plan.sh  demo_stable_yield_prepare.sh  disable-bigint-buffer-native.cjs  run-daemon-local.sh  w3rt_api_demo.sh  w3rt_api_server.mjs  w3rt_balance.mjs  w3rt_plan_run.mjs  w3rt_strategy_gen.mjs  w3rt_strategy_score.mjs  w3rt_swap_safe.mjs  w3rt_tg_cli.mjs  w3rt_verify_run.mjs
skills/w3rt-plan-run/: SKILL.md
workflows/: meteora_open_position_simulate_only.yaml  mock-arb.yaml  solana_balance.yaml  solana_jupiter_swap_adapter.yaml  solana_swap_exact_in.yaml  solana_swap_exact_in_adapter.yaml  solana_swap_simulate_only.yaml  solana_token_accounts.yaml  solana_transfer.yaml  solana_transfer_simulate_only.yaml
(+12 files in other folders)
